--- a/manifests/overlays/dev/kustomization.yaml
+++ b/manifests/overlays/dev/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - ../../base
-namespace: dev-warehouse
+#namespace: dev-warehouse
 namePrefix: dev-
 images:
   - name: nginx
