--- a/manifests/overlays/prod/kustomization.yaml
+++ b/manifests/overlays/prod/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - ../../base
-namespace: prod-warehouse
+#namespace: prod-warehouse
 namePrefix: prod-
 images:
   - name: nginx
