--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webserver
+  labels:
+    team: warehouse
+    
 spec:
   replicas: 1
   selector:
