--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - image: nginx:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: webserver
         env:
           - name: ENVONE
