change image pull policy

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -16,7 +16,7 @@ spec:
   template:
     metadata:
       labels:
-        team: warehouse
+        team: "warehouse"
         critical: "5"
     spec:
       containers:
