--- a/manifests/overlays/dev/deployment.yaml
+++ b/manifests/overlays/dev/deployment.yaml
@@ -7,6 +7,7 @@ spec:
   template:
     spec:
       containers:
+      - image: nginx:latest
         env:
           - name: ENVONE
             value: "hellothisisDEV"
