--- a/manifests/overlays/dev/deployment.yaml
+++ b/manifests/overlays/dev/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       containers:
-      - image: nginx:latest
+      - name: webserver
         env:
           - name: ENVONE
             value: "hellothisisDEV"
